# h_pose_vs

./: CMakeLists.txt  README.md  package.xml
action/: cartesian.action  pose.action
config/: local_pose_params.yml
config/decklink_storz_exoscope_calibrationdata/: ost.txt  ost.yaml
include/h_pose_vs/: base_pose_action_server.h  local_pose_action_server.h
launch/: decklink_storz_exoscope.launch  h_pose_exoscope_stored_views_vs.launch  h_pose_vs_node.launch
src/: h_pose_vs_node.cpp  pose_client_node.cpp  pose_server_node.cpp
