<?xml version="1.0"?>
<package format="2">
  <name>h_pose_vs</name>
  <version>0.0.0</version>
  <description>The h_pose_vs package</description>
  <maintainer email="martin.huber@kcl.ac.uk">mhubii</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <depend>moveit_ros_planning_interface</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>eigen_conversions</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>

  <exec_depend></exec_depend>
</package>
